fixed quantity button ui on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,6 @@ a {
 }
 
 .stock-info {
-  position:absolute;
   margin-left:50px;
 }
 
